RC: Stop freeze timer when PENDING_DISCARD TabLifecycleUnit is focused.

When a PENDING_DISCARD TabLifecycleUnit is focused, its state is
transitioned to PENDING_FREEZE, to indicate that the renderer is
processing a freeze request, but that no discard should happen when
it's done.

With this CL, we also stop the freeze timer to ensure that
FinishDiscard() isn't called when the renderer tells the browser that
the freeze request has been processed.

Bug: 854720
Change-Id: Iea98644ea1e9b056eb05bbf5ae6da870c324064c
Reviewed-on: https://chromium-review.googlesource.com/1108376
Reviewed-by: Sébastien Marchand <sebmarchand@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569009}
Former-commit-id: cab8ab45c85fb1517dd50cc22cfd7ceb8bfde14e